<resources>
    <string name="app_name">MemorablePlaces</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="more">more</string>
    <string name="search">search</string>
    <string name="my_location">My location</string>
    <string name="saved_locations">Saved locations</string>
    <string name="save_location">Save location</string>
    <string name="save">save</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="saved_places">Saved places</string>
    <string name="latitude">Latitude</string>
    <string name="edit">edit</string>
    <string name="saved">Saved</string>
    <string name="search_places">Search places</string>
    <string name="longitude">Longitude</string>
</resources>