<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottomSheet"
    android:background="@android:color/background_dark"
    app:behavior_peekHeight="8dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" >

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"

        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/save_location"
            android:textSize="20sp"
            android:textColor="@android:color/white"
        />

        <ImageView
            android:id="@+id/headerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_up_24"
            android:layout_gravity="center"
        />

    </LinearLayout>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_margin="20dp"

        app:layout_constraintTop_toBottomOf="@id/headerLayout"
    />

    <EditText
        android:id="@+id/descInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_margin="20dp"

        app:layout_constraintTop_toBottomOf="@id/nameInput"
    />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="20dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descInput"
    />

</androidx.constraintlayout.widget.ConstraintLayout>